arr/wizarr/wizarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wizarr
  namespace: arr
  labels:
    app.kubernetes.io/name: wizarr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wizarr
      app.kubernetes.io/part-of: arr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wizarr
        app.kubernetes.io/part-of: arr
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr:2025.7.1
          ports:
            - containerPort: 5690
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /data/database
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/arr/wizarr
            server: 192.168.86.107
