arr/wizarr/wizarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: arr
spec:
  selector:
    app: wizarr
  ports:
    - protocol: TCP
      port: 5690
      targetPort: 5690
