arr/wizarr/wizarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wizarr
  namespace: arr
  labels:
    app.kubernetes.io/name: wizarr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`join.flexflix.top`)
      kind: Rule
      services:
        - name: wizarr
          port: 5690
